Develop (#29)
* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env

* ok (#13)

* Develop (#12)

* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env


* Update main.go


* change name

* modulize model layer, revised auth, added homepage

* remove code

* added infra image

* rev

* add endpoint

* add album

* add kind

* added getAlbumById

* added getAlbumsByKindId

* added search logic

* add search & products

* added AlbumType

* added getShoppingCartByAccount

* added auth expire time

* added join data

* add album search
