# docs/swagger.json
@@ -185,8 +185,13 @@
                         "type": "string",
                         "description": "string valid",
                         "name": "name",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "albumName",
+                        "in": "query"
                     }
                 ],
                 "responses": {
